A bunch of tiny improvements

--- a/sections/b.main/2.background/1.sroiq.tex
+++ b/sections/b.main/2.background/1.sroiq.tex
@@ -1,9 +1,9 @@
 % Introduce what description logcs are 
-Formally, an ontology is a set of statements expressed in a suitable logical language and with the purpose of describing a specific domain of interest. While ontologies can be represented using a number of different formalisms, for the use in automated reasoning a trade-off must be made between expressivity and practicality. For example, \emph{first-order logic} (FOL) is more expressive than propositional logic, but this added expressivity comes at the cost of decidability. In addition to decidability, scalability must also be considered in the choice and design of the used representation of the knowledge.
+Formally, an ontology is a set of statements expressed in an appropriate logical language and with the purpose of describing a specific domain of interest. While ontologies can be represented using a number of different formalisms, for the use in automated reasoning a trade-off must be made between expressivity and practicality. For example, \emph{first-order logic} (FOL) is more expressive than propositional logic, but this added expressivity comes at the cost of decidability. In addition to decidability, scalability must also be considered in the choice and design of the used representation of the knowledge.
 
-\emph{Description logics} (DL) are often used for building ontologies. They encompass a family of related knowledge representation languages and are often fragments of FOL\footnote{While DLs are fragments of FOL in the sense that for every ontology in a given DL, there exists a FOL theory that has the same models, the syntax used by DLs is different from the syntax used in FOL, and as such a DL axiom is not a valid FOL sentence.} with equality, as is the case with the DL $\SROIQ$ which is the main focus of this work. DLs are almost always designed to be decidable, and generally offer a favourable trade-off between expressivity and complexity of reasoning tasks. Different DLs have been developed for different applications, that feature varying levels of expressivity.
+\emph{Description logics} (DL) are often used for building ontologies. They include a family of related knowledge representation languages and are often fragments of FOL\footnote{While DLs are fragments of FOL in the sense that for every ontology in a given DL, there exists a FOL theory that has the same models, the syntax used by DLs is different from the syntax used in FOL, and as such a DL axiom is not a valid FOL sentence.} with equality, as is the case with the DL $\SROIQ$ which is the main focus of this work. DLs are almost always designed to be decidable, and generally offer a favourable trade-off between expressivity and complexity of reasoning tasks. Different DLs have been developed for different applications, and allow for varying levels of expressivity.
 
-In this section will briefly introduce the DL $\SROIQ$ \cite{horrocks2006even, rudolph2011foundations, baader_horrocks_lutz_sattler_2017}. A more detailed description, including more explaintions and examples, can be found in \cref{sroiq-appendix}.
+This section will briefly introduce the DL $\SROIQ$ \cite{horrocks2006even, rudolph2011foundations, baader_horrocks_lutz_sattler_2017}. A more detailed description, including more explanations and examples, can be found in \cref{sroiq-appendix}.
 
 \subsection{The Syntax of \SROIQ} \label{sroiq-syntax}
 
@@ -52,7 +52,7 @@ A \SROIQ  ontology $\Omc = \Tmc \cup \Amc \cup \Rmc$ consists of a TBox $\Tmc$, 
 
 % describe the semantics
 % whats a interpretation, when is it a model
-The semantics of \SROIQ is defined using \emph{interpretations} $I = \langle \Delta^I, \cdot^I \rangle$, where $\Delta^I$ is a non-empty \emph{domain} and $\cdot^I$ is a function associating to each individual name $a$ an element of the domain $a^I \in \Delta^I$, to each concept $C$ a subset of the domain $C^I \subseteq \Delta^I$, and to each role $R$ a binary relation on the domain $R^I \subseteq \Delta^I \times \Delta^I$. The interpretation function $\cdot^I$ is extended to the interpretation of complex roles and concepts such that
+The semantics of \SROIQ is defined using \emph{interpretations} $I = \langle \Delta^I, \cdot^I \rangle$, where $\Delta^I$ is a non-empty \emph{domain} and $\cdot^I$ is a function associating to each individual name $a$ an element of the domain $a^I \in \Delta^I$, to each concept $C$ a subset of the domain $C^I \subseteq \Delta^I$, and to each role $R$ a binary relation on the domain $R^I \subseteq \Delta^I \times \Delta^I$. The interpretation function $\cdot^I$ is extended to the interpretation of complex roles and concepts, such that
 \begin{align*}
   U^I &= \Delta^I \times \Delta^I \enspace, &
   \top^I &= \Delta^I \enspace, &
@@ -99,5 +99,5 @@ Since \ALC will be used for part of the discussion on related work, this is a br
 \begin{align*}
   C &::= \bot \mid \top \mid A \mid \neg C \mid C \sqcap C \mid C \sqcup C \mid \forall R.C \mid \exists R.C \enspace,
 \end{align*}
-where $A \in N_C$ is a concept name and $r \in N_R$ is a role name. The universal role, or inverse roles are not part of \ALC. Further, \ALC supports only two types of axioms, GCIs of the form $C \sqsubseteq D$ and class assertions $C(a)$ where $C$ and $D$ are concepts and $a \in N_I$ is an individual name. It should be noted that \ALC has the unique name assumption, meaning that two different individual names must necessarily refer to different elements of the domain in every interpretation. Aside from that, the axioms and concepts have the same semantic meaning as their direct counterparts in \SROIQ.
+where $A \in N_C$ is a concept name and $r \in N_R$ is a role name. The universal role or inverse roles are not part of \ALC. Further, \ALC supports only two types of axioms, GCIs of the form $C \sqsubseteq D$ and class assertions $C(a)$ where $C$ and $D$ are concepts and $a \in N_I$ is an individual name. It should be noted that \ALC has the unique name assumption, meaning that two different individual names must necessarily refer to different elements of the domain in every interpretation. Aside from that, the axioms and concepts have the same semantic meaning as their direct counterparts in \SROIQ.
 
