--- a/sections/b.main/3.theory/3.weakening.tex
+++ b/sections/b.main/3.theory/3.weakening.tex
@@ -1,5 +1,5 @@
 
-It follows now the extended definitions for the cover sets, refinement operators, and axiom weakening operator to \SROIQ concepts and axioms. This work builds on the approaches presented in \cite{confalonieri2020towards} and introduce further the weakening of RIAs as well a separation between $\Omcref$ and $\Omcfull$. We begin by defining the upward and downward cover sets. These are now defined for both concepts and roles. The set of subconcepts is taken from $\Omcfull$ as opposed to $\Omcref$, as it is likely to contain more subconcepts, thus improving the granularity of the cover sets. Further, the cover sets for roles are computed over the set of simple roles in $\Omcfull$. Additionally, we define the upward and downward cover also for non-negative integers, as they will be useful for the refinement of cardinality constraints.
+It follows now the extended definitions for the cover sets, refinement operators, and axiom weakening operator to \SROIQ concepts and axioms. This work builds on the approaches presented in \cite{confalonieri2020towards} and introduces further the weakening of RIAs as well a separation between $\Omcref$ and $\Omcfull$. We begin by defining the upward and downward cover sets. These are now defined for both concepts and roles. The set of subconcepts is taken from $\Omcfull$ as opposed to $\Omcref$, as it is likely to contain more subconcepts, thus improving the granularity of the cover sets. Further, the cover sets for roles are computed over the set of simple roles in $\Omcfull$. Additionally, we define the upward and downward cover also for non-negative integers, as they will be useful for the refinement of cardinality constraints.
 
 \begin{definition} \label{def:covers}
   Let $\Omcfull$ and $\Omcref \subseteq \Omcfull$ be two \SROIQ ontologies that share the same vocabulary $N_C$, $N_R$, and $N_I$. The \emph{upward cover} and \emph{downward cover} for a concept $C$ are given by
@@ -29,7 +29,7 @@ It follows now the extended definitions for the cover sets, refinement operators
   \end{align*}
 \end{definition}
 
-As has already been observer in \cref{ex:up-cover-alc}, on their own, the upward and downward covers of concepts are missing some interesting refinements. Since they operate only over the subconcepts of $\Omcfull$, some rather obvious refinements, like for example removing conjuncts will often be missed.
+As has already been observer in \cref{ex:up-cover-alc}, on their own, the upward and downward covers of concepts are missing some interesting refinements. Since they operate only over the subconcepts of $\Omcfull$, some rather obvious refinements, like for example removing conjuncts, will often be missed.
 \begin{example} \label{exa:up-cover}
   Let $N_C = \{A, B, C\}$, $N_R = \{ r, s \}$, and $\Omc = \{A \sqsubseteq B, r \sqsubseteq s\}$. $\sub(\Omc) = \{\top, \bot, A, B\}$. The upward cover of $C \sqcup A$ is equal to $\UpC_{\Omc,\Omc}(C \sqcup A) = \{ \top \}$. The potentiality refinement to $C \sqcup B$ will be missed by all upward and downward covers, because $C \sqcup B \not\in \sub(\Omc)$. Further, $\UpC_{\Omc,\Omc}(\forall r.A) = \{ \top \}$, even if $\forall r.B$ and $\forall s.A$ are both possible generalizations.
 \end{example}
@@ -38,7 +38,7 @@ To also address some of these omissions, we define generalization and specializa
 
 \begin{definition}
   Let $\refine$ and $\corefine$ be two functions with domain $\Lmc(N_C, N_R, N_I) \cup \Lmc(N_C) \cup \mathbb{N}_0$. They map every concept to a finite subset of $\Lmc(N_C, N_R, N_I)$, every role to a subset of $\Lmc(N_C)$, and every non-negative integer to a finite subset of $\mathbb{N}_0$.
-  The \emph{abstract refinement operator} is defined recursively by induction on the structure of concepts as follows.
+  The \emph{abstract refinement operator} is defined recursively by induction on the structure of concepts, as follows.
   \begin{align*}
     \zeta_{\refine,\corefine}(A) ={} & \refine(A) \quad, A \in N_C \cup \{\top, \bot\} \enspace, \\
     \zeta_{\refine,\corefine}(\lnot C) ={} & \refine(\lnot C) \cup \{ \lnot C' \mid C' \in \zeta_{\corefine,\refine}(C) \} \enspace, \\
@@ -84,20 +84,20 @@ Revisiting the case in \Cref{exa:up-cover} we observe that $\gamma_{\Omc,\Omc}(C
 
 \begin{proof}
   \item \ref{lem:finiteness}.\enspace \textbf{finiteness:\enspace}
-  The upward and downward cover sets for concepts, roles, and integers are always finite. The number of roles is finite, because the set of role names is finite. Since refinement of roles is equivalent to applying the upward or downward covers, the set of refinements must equally be finite. Similarly, the covers over concepts are limited to subconcepts, and since ontologies are finite sets of axioms, and all axioms have a finite size, there must be a finite number of subconcepts. We can show by structural induction on concept expressions, that the result of the refinement operators must be a finite set for all concepts. This follows directly from the fact that the result is always the union of a constant number of finite sets.
+  The upward and downward cover sets for concepts, roles, and integers are always finite. The number of roles is finite, because the set of role names is finite. Since refinement of roles is equivalent to applying the upward or downward covers, the set of refinements must equally be finite. Similarly, the covers over concepts are limited to subconcepts, and since ontologies are finite sets of axioms, and all axioms have a finite size, there must be a finite number of subconcepts. We can show, by structural induction on concept expressions, that the result of the refinement operators must be a finite set for all concepts. This follows directly from the fact that the result is always the union of a constant number of finite sets.
 
   \item \ref{lem:generalisation}.\enspace \textbf{generalization and specialization:\enspace}
   We first observe that by definition, if $X \in \UpC_{\Omcref,\Omcfull}(Y)$ then $Y \sqsubseteq_\Omcref X$ must hold. Likewise, it follows from the definition that if $X \in \DownC_{\Omcref,\Omcfull}(X)$ then $X \sqsubseteq_\Omcref Y$. For an integer $n$, the upward cover contains only values greater or equal to $n$, while the downward cover contains only values less or equal $n$. We proceed with a proof by structural induction. We will show the proof for the generalization operator, the proof for the specialization operator can be approached analogously.
   \begin{itemize}
     \item For $Y \in N_C \cup \Lmc(N_R) \cup \{ \nominal a \mid a \in N_I \} \cup \{ \top, \bot \}$ the generalization operator is equivalent to a simple application of the upwards cover and $Y \sqsubseteq_\Omcref X$ holds.
-    \item For $Y = \lnot C$, given any model $I$ of $\Omcref$, we know for all elements $\delta \in (\lnot C)^I$ that $\delta \not\in C^I$. By our inductive hypothesis we know that $C' \sqsubseteq_\Omcref C$ holds for $C' \in \rho_{\Omcref,\Omcfull}(C)$. It follows that $\delta \not\in C'^I$ and therefore $\delta \in (\lnot C')^I$. We conclude that $(\lnot C)^I \subseteq (\lnot C')^I$ in every model $I$ of $\Omcref$ and consequently $\lnot C \sqsubseteq_\Omcref \lnot C'$.
-    \item For $Y = C \sqcap D$, given any model $I$ of $\Omcref$, we know for all elements $\delta \in (C \sqcap D)^I$ that $\delta \in C^I$ and $\delta \in D^I$. By our inductive hypothesis we know that $C \sqsubseteq_\Omcref C'$ holds for $C' \in \gamma_{\Omcref,\Omcfull}(C)$ and $D \sqsubseteq_\Omcref D'$ for $D' \in \gamma_{\Omcref,\Omcfull}(D)$. It follows that $\delta \in C'^I$ and $\delta \in D'^I$, therefore $\delta \in (C' \sqcap D)^I$ and $\delta \in (C \sqcap D')^I$. We conclude that $(C \sqcap D)^I \subseteq (C' \sqcap D)^I$ and $(C \sqcap D)^I \subseteq (C \sqcap D')^I$ in every model $I$ of $\Omcref$ and consequently $C \sqcap D \sqsubseteq_\Omcref C' \sqcap D$ and $C \sqcap D \sqsubseteq_\Omcref C \sqcap D'$.
-    \item For $Y = C \sqcup D$, given any model $I$ of $\Omcref$, we know for all elements $\delta \in (C \sqcup D)^I$ that $\delta \in C^I \cup D^I$. By our inductive hypothesis we know that $C \sqsubseteq_\Omcref C'$ holds for $C' \in \gamma_{\Omcref,\Omcfull}(C)$ and $D \sqsubseteq_\Omcref D'$ for $D' \in \gamma_{\Omcref,\Omcfull}(D)$. It follows that $\delta \in C'^I \cup D^I$ and $\delta \in C^I \cup D'^I$, therefore $\delta \in (C' \sqcup D)^I$ and $\delta \in (C \sqcup D')^I$. We conclude that $(C \sqcup D)^I \subseteq (C' \sqcup D)^I$ and $(C \sqcup D)^I \subseteq (C \sqcup D')^I$ in every model $I$ of $\Omcref$ and consequently, $C \sqcup D \sqsubseteq_\Omcref C' \sqcup D$ and $C \sqcup D \sqsubseteq_\Omcref C \sqcup D'$.
-    \item For $Y = \forall R.C$, given any model $I$ of $\Omcref$, we know for all elements $\delta \in (\forall R.C)^I$ that for all $\delta'$ such that $\langle \delta, \delta' \rangle \in R^I$, $\delta' \in C^I$. By our inductive hypothesis we know that $C \sqsubseteq_\Omcref C'$ holds for $C' \in \gamma_{\Omcref,\Omcfull}(C)$ and $R' \sqsubseteq_\Omcref R$ for $R' \in \rho_{\Omcref,\Omcfull}(R)$. It follows that $R'^I \subseteq R^I$, so there are no new candidates for $\delta'$. We further know that for all elements $\delta' \in C^I$, $\delta' \in C'^I$. We conclude that $\delta \in (\forall R'.C)^I$ and $\delta \in (\forall R.C')^I$. Therefore, $\forall R.C \sqsubseteq_\Omcref \forall R'.C$ and $\forall R.C \sqsubseteq_\Omcref \forall R.C'$.
-    \item For $Y = \exists R.C$, given any model $I$ of $\Omcref$, we know for all elements $\delta \in (\exists R.C)^I$ there exists a $\delta'$ such that $\langle \delta, \delta' \rangle \in R^I$ and $\delta' \in C^I$. By our inductive hypothesis we know that $C \sqsubseteq_\Omcref C'$ holds for $C' \in \gamma_{\Omcref,\Omcfull}(C)$ and $R \sqsubseteq_\Omcref R'$ for $R' \in \gamma_{\Omcref,\Omcfull}(R)$. It follows that $\langle \delta, \delta' \rangle \in R'^I$ and $\delta' \in C'^I$. We conclude that $\delta \in (\exists R'.C)^I$ and $\delta \in (\exists R.C')^I$. Hence, $\exists R.C \sqsubseteq_\Omcref \exists R'.C$ and $\exists R.C \sqsubseteq_\Omcref \exists R.C'$.
-    \item For $Y = \exists R.\self$, given any model $I$ of $\Omcref$, we know for all elements $\delta \in (\exists R.\self)^I$, $\langle \delta, a \rangle \in R^I$. By our inductive hypothesis we know that $R \sqsubseteq_\Omcref R'$ for $R' \in \gamma_{\Omcref,\Omcfull}(R)$. It follows that $\langle \delta, \delta \rangle \in R'^I$. We conclude that $\delta \in (\exists R'.\self)^I$ and thus, $\exists R.\self \sqsubseteq_\Omcref \exists R'.C\self$.
-    \item For $Y ={} \more n R.C$, given any model $I$ of $\Omcref$, we know for all elements $\delta \in (\more n R.C)^I$ there exist at least $n$ elements $\delta_1, \dots, \delta_n$ such that $\langle \delta, \delta_i \rangle \in R^I$ and $\delta_i \in C^I$ for $i = 1, \dots, n$. Since there are at least $n$ such elements, there are also at least $k \leq n$, meaning $\more n R.C \sqsubseteq_\Omcref \more k R.C$. By our inductive hypothesis we also know that $C \sqsubseteq_\Omcref C'$ holds for $C' \in \gamma_{\Omcref,\Omcfull}(C)$ and $R \sqsubseteq_\Omcref R'$ for $R' \in \gamma_{\Omcref,\Omcfull}(R)$. It follows that $\langle \delta, \delta_i \rangle \in R'^I$ and $\delta_i \in C'^I$ for $i = 1, \dots, n$. We conclude that $\delta \in (\more n R'.C)^I$ and $\delta \in (\more n R.C')^I$. Hence, $\more n R.C \sqsubseteq_\Omcref \more n R'.C$ and $\more n R.C \sqsubseteq_\Omcref \more n R.C'$.
-    \item For $Y ={} \less n R.C$, given any model $I$ of $\Omcref$, we know for all elements $\delta \in (\less n R.C)^I$ there exist at most $n$ elements $\delta_1, \dots, \delta_n$ such that $\langle \delta, \delta_i \rangle \in R^I$ and $\delta_i \in C^I$ for $i = 1, \dots, n$. Since there are at most $n$ such elements, there are also at most $k \geq n$, meaning $\less n R.C \sqsubseteq_\Omcref \less k R.C$. By our inductive hypothesis we also know that $C' \sqsubseteq_\Omcref C$ holds for $C' \in \rho_{\Omcref,\Omcfull}(C)$ and $R' \sqsubseteq_\Omcref R$ for $R' \in \rho_{\Omcref,\Omcfull}(R)$. It follows that there exist no other $\delta' \not\in \{ \delta_1, \dots, \delta_n \}$ such that $\langle \delta, \delta' \rangle \in R'^I$ and $\delta' \in C$, or $\langle \delta, \delta' \rangle \in R^I$ and $\delta' \in C'^I$. We conclude that there are still at most $n$ such elements, hence, $\delta \in (\less n R'.C)^I$ and $\delta \in (\less n R.C')^I$. Therefore, $\less n R.C \sqsubseteq_\Omcref \less n R'.C$ and $\less n R.C \sqsubseteq_\Omcref \less n R.C'$.
+    \item For $Y = \lnot C$, given any model $I$ of $\Omcref$, we know for all elements $\delta \in (\lnot C)^I$ that $\delta \not\in C^I$. By our inductive hypothesis, we know that $C' \sqsubseteq_\Omcref C$ holds for $C' \in \rho_{\Omcref,\Omcfull}(C)$. It follows that $\delta \not\in C'^I$ and therefore $\delta \in (\lnot C')^I$. We conclude that $(\lnot C)^I \subseteq (\lnot C')^I$ in every model $I$ of $\Omcref$ and consequently $\lnot C \sqsubseteq_\Omcref \lnot C'$.
+    \item For $Y = C \sqcap D$, given any model $I$ of $\Omcref$, we know for all elements $\delta \in (C \sqcap D)^I$ that $\delta \in C^I$ and $\delta \in D^I$. By our inductive hypothesis, we know that $C \sqsubseteq_\Omcref C'$ holds for $C' \in \gamma_{\Omcref,\Omcfull}(C)$ and $D \sqsubseteq_\Omcref D'$ for $D' \in \gamma_{\Omcref,\Omcfull}(D)$. It follows that $\delta \in C'^I$ and $\delta \in D'^I$, therefore $\delta \in (C' \sqcap D)^I$ and $\delta \in (C \sqcap D')^I$. We conclude that $(C \sqcap D)^I \subseteq (C' \sqcap D)^I$ and $(C \sqcap D)^I \subseteq (C \sqcap D')^I$ in every model $I$ of $\Omcref$ and consequently $C \sqcap D \sqsubseteq_\Omcref C' \sqcap D$ and $C \sqcap D \sqsubseteq_\Omcref C \sqcap D'$.
+    \item For $Y = C \sqcup D$, given any model $I$ of $\Omcref$, we know for all elements $\delta \in (C \sqcup D)^I$ that $\delta \in C^I \cup D^I$. By our inductive hypothesis, we know that $C \sqsubseteq_\Omcref C'$ holds for $C' \in \gamma_{\Omcref,\Omcfull}(C)$ and $D \sqsubseteq_\Omcref D'$ for $D' \in \gamma_{\Omcref,\Omcfull}(D)$. It follows that $\delta \in C'^I \cup D^I$ and $\delta \in C^I \cup D'^I$, therefore $\delta \in (C' \sqcup D)^I$ and $\delta \in (C \sqcup D')^I$. We conclude that $(C \sqcup D)^I \subseteq (C' \sqcup D)^I$ and $(C \sqcup D)^I \subseteq (C \sqcup D')^I$ in every model $I$ of $\Omcref$ and consequently, $C \sqcup D \sqsubseteq_\Omcref C' \sqcup D$ and $C \sqcup D \sqsubseteq_\Omcref C \sqcup D'$.
+    \item For $Y = \forall R.C$, given any model $I$ of $\Omcref$, we know for all elements $\delta \in (\forall R.C)^I$ that for all $\delta'$ such that $\langle \delta, \delta' \rangle \in R^I$, $\delta' \in C^I$. By our inductive hypothesis, we know that $C \sqsubseteq_\Omcref C'$ holds for $C' \in \gamma_{\Omcref,\Omcfull}(C)$ and $R' \sqsubseteq_\Omcref R$ for $R' \in \rho_{\Omcref,\Omcfull}(R)$. It follows that $R'^I \subseteq R^I$, so there are no new candidates for $\delta'$. We further know that for all elements $\delta' \in C^I$, $\delta' \in C'^I$. We conclude that $\delta \in (\forall R'.C)^I$ and $\delta \in (\forall R.C')^I$. Therefore, $\forall R.C \sqsubseteq_\Omcref \forall R'.C$ and $\forall R.C \sqsubseteq_\Omcref \forall R.C'$.
+    \item For $Y = \exists R.C$, given any model $I$ of $\Omcref$, we know for all elements $\delta \in (\exists R.C)^I$ there exists a $\delta'$ such that $\langle \delta, \delta' \rangle \in R^I$ and $\delta' \in C^I$. By our inductive hypothesis, we know that $C \sqsubseteq_\Omcref C'$ holds for $C' \in \gamma_{\Omcref,\Omcfull}(C)$ and $R \sqsubseteq_\Omcref R'$ for $R' \in \gamma_{\Omcref,\Omcfull}(R)$. It follows that $\langle \delta, \delta' \rangle \in R'^I$ and $\delta' \in C'^I$. We conclude that $\delta \in (\exists R'.C)^I$ and $\delta \in (\exists R.C')^I$. Hence, $\exists R.C \sqsubseteq_\Omcref \exists R'.C$ and $\exists R.C \sqsubseteq_\Omcref \exists R.C'$.
+    \item For $Y = \exists R.\self$, given any model $I$ of $\Omcref$, we know for all elements $\delta \in (\exists R.\self)^I$, $\langle \delta, a \rangle \in R^I$. By our inductive hypothesis, we know that $R \sqsubseteq_\Omcref R'$ for $R' \in \gamma_{\Omcref,\Omcfull}(R)$. It follows that $\langle \delta, \delta \rangle \in R'^I$. We conclude that $\delta \in (\exists R'.\self)^I$ and thus, $\exists R.\self \sqsubseteq_\Omcref \exists R'.C\self$.
+    \item For $Y ={} \more n R.C$, given any model $I$ of $\Omcref$, we know for all elements $\delta \in (\more n R.C)^I$ there exist at least $n$ elements $\delta_1, \dots, \delta_n$ such that $\langle \delta, \delta_i \rangle \in R^I$ and $\delta_i \in C^I$ for $i = 1, \dots, n$. Since there are at least $n$ such elements, there are also at least $k \leq n$, meaning $\more n R.C \sqsubseteq_\Omcref \more k R.C$. By our inductive hypothesis, we also know that $C \sqsubseteq_\Omcref C'$ holds for $C' \in \gamma_{\Omcref,\Omcfull}(C)$ and $R \sqsubseteq_\Omcref R'$ for $R' \in \gamma_{\Omcref,\Omcfull}(R)$. It follows that $\langle \delta, \delta_i \rangle \in R'^I$ and $\delta_i \in C'^I$ for $i = 1, \dots, n$. We conclude that $\delta \in (\more n R'.C)^I$ and $\delta \in (\more n R.C')^I$. Hence, $\more n R.C \sqsubseteq_\Omcref \more n R'.C$ and $\more n R.C \sqsubseteq_\Omcref \more n R.C'$.
+    \item For $Y ={} \less n R.C$, given any model $I$ of $\Omcref$, we know for all elements $\delta \in (\less n R.C)^I$ there exist at most $n$ elements $\delta_1, \dots, \delta_n$ such that $\langle \delta, \delta_i \rangle \in R^I$ and $\delta_i \in C^I$ for $i = 1, \dots, n$. Since there are at most $n$ such elements, there are also at most $k \geq n$, meaning $\less n R.C \sqsubseteq_\Omcref \less k R.C$. By our inductive hypothesis, we also know that $C' \sqsubseteq_\Omcref C$ holds for $C' \in \rho_{\Omcref,\Omcfull}(C)$ and $R' \sqsubseteq_\Omcref R$ for $R' \in \rho_{\Omcref,\Omcfull}(R)$. It follows that there exist no other $\delta' \not\in \{ \delta_1, \dots, \delta_n \}$ such that $\langle \delta, \delta' \rangle \in R'^I$ and $\delta' \in C$, or $\langle \delta, \delta' \rangle \in R^I$ and $\delta' \in C'^I$. We conclude that there are still at most $n$ such elements, hence, $\delta \in (\less n R'.C)^I$ and $\delta \in (\less n R.C')^I$. Therefore, $\less n R.C \sqsubseteq_\Omcref \less n R'.C$ and $\less n R.C \sqsubseteq_\Omcref \less n R.C'$.
   \end{itemize}
 \end{proof}
 
