--- a/sections/c.back/a.sroiq/1.sroiq-syn.tex
+++ b/sections/c.back/a.sroiq/1.sroiq-syn.tex
@@ -42,7 +42,7 @@ where $n > 1$ and $R$, $S$, $S_1, \cdots, S_n$ are roles such that $S \preceq R$
   The RBox $\Rmc = \{ r \circ s \sqsubseteq t, t \sqsubseteq v, v \sqsubseteq s \}$ is not regular. Intuitively, there exists a cyclic dependency involving a complex RIA. That is, $t$ depends on $s$ via a complex RIA, $v$ subsumes $t$, and $s$ subsumes $v$. This means, $s \preceq t$, $t \preceq v$ and $v \preceq s$ must hold. By transitivity, $t \preceq s$ must also hold. However, because the first axiom is a complex RIA, $t \not\preceq s$ must hold, causing a contradiction.
 \end{example}
 
-To make axiom weakening simpler, this definition is slightly more general than necessary. The definition of regularity presented here is more permissive than the one in \cite{horrocks2006even} in that it always allows simple roles on the left-hand side similar to what has been described in \cite{rudolph2011foundations}. However, it is more permissive than stated in \cite{rudolph2011foundations} in that it allows for inverse roles on the right-hand side. This definition of regularity aligns more closely with the implementation of the OWL 2 DL \cite{motik2012ontology} profile checker in the OWL API \cite{horridge2011owl,owlapi}.
+To make axiom weakening simpler, this definition is slightly more general than necessary. The definition of regularity presented here is more permissive than the one in \cite{horrocks2006even} in that it always allows simple roles on the left-hand side, similar to what has been described in \cite{rudolph2011foundations}. However, it is more permissive than stated in \cite{rudolph2011foundations} in that it allows for inverse roles on the right-hand side. This definition of regularity aligns more closely with the implementation of the OWL 2 DL \cite{motik2012ontology} profile checker in the OWL API \cite{horridge2011owl,owlapi}.
 
 The set of \emph{role assertions} $\Rmc_a$ is a finite set of statements with the form $\disjoint(S_1, S_2)$ (\emph{disjointness}) where $S_1$, and $S_2$ are simple roles in $\Rmc_h$. In \cite{horrocks2006even} the authors define additionally the role assertions $\op{Sym}(R)$ (\emph{symmetry}), $\op{Asy}(S)$ (\emph{asymmetry}), $\op{Tra}(R)$ (\emph{transitivity}), $\op{Ref}(R)$ (\emph{reflexivity}), and $\op{Irr}(R)$ (\emph{irreflexivity}). These additional assertions can, however, be written using the alternative sets of axioms $\{ \inv(R) \sqsubseteq R \}$, $\{ \disjoint(R, \inv(R)) \}$, $\{ R \circ R \sqsubseteq R \}$, $\{ r' \sqsubseteq R , \top \sqsubseteq \exists r'.\self \}$, and $\{ \top \sqsubseteq \lnot \exists R.\self \}$ respectively. Note that the asymmetry assertion requires a simple role, and that $r'$ in the case of reflexivity must be a fresh role name not otherwise used in the ontology\footnote{This is necessary to allow the use of non-simple roles in a reflexivity assertion. Multiple assertions can share the same role name $r'$.}.
 
