--- a/sections/c.back/d.prototype.tex
+++ b/sections/c.back/d.prototype.tex
@@ -15,7 +15,7 @@ If you would rather use the pre-packaged jar files, those are also available in 
 
 \section{Use as a Library}
 
-Since the project is implemented as a Maven project it is possible to use it as a dependency for another Maven project. To add the library as a dependency, if you have build the project yourself and run \inlinecode{mvn install}, it is sufficient to add the following to your \inlinecode{pom.xml} file. 
+Since the project is implemented as a Maven project, it is possible to use it as a dependency for another Maven project. To add the library as a dependency, if you have built the project yourself and run \inlinecode{mvn install}, it is sufficient to add the following to your \inlinecode{pom.xml} file. 
 
 \begin{lstlisting}
 <dependency>
@@ -56,7 +56,7 @@ To simply use the applications that were also used for the evaluation in this th
     \item \inlinecode{ShowOntology} \enspace Is a simple application that prints all the axioms in the ontology.
 \end{itemize}
 
-To get specific information about how to use an application, simply use the \inlinecode{--help} argument. For example the following is the help output for the \inlinecode{RepairWeakening} application.
+To get specific information about how to use an application, simply use the \inlinecode{--help} argument. For example, the following is the help output for the \inlinecode{RepairWeakening} application.
 
 \begin{lstlisting}
 Usage: www.ontologyutils.apps.RepairWeakening [options] <file>
