--- a/sections/c.back/f.eval.tex
+++ b/sections/c.back/f.eval.tex
@@ -373,7 +373,7 @@ This appendix contains some more results produced by the evaluation. Most of the
     vio & 10.5 & [7.4, 14.4] & 7101 & [6539, 7682] & 12995 & [8246, 18875] & 2\% & (8\%) \\
     \hline
   \end{tabular}
-  \caption{Results of the evaluation with respect to performance while repairing using axiom weakening, but keeping the axioms of the reference ontology unchanged during repair. Number of weakening iterations, reasoner calls, and total repair time are given as sample mean, with 95\% confidence interval in brackets. The frequency of failed runs is shown as percentage of repairs by weakening that were started but not completed. In parentheses the percentage of total failed runs including those with timeout during generation of the inconsistent ontology. Note that repair using this method has only been attempted after the normal weakening based repair has been successful. This may skew the frequency of failures.}
+  \caption{Results of the evaluation with respect to performance while repairing using axiom weakening, but keeping the axioms of the reference ontology unchanged during repair. Number of weakening iterations, reasoner calls, and total repair time are given as sample mean, with 95\% confidence interval in brackets. The frequency of failed runs is shown as percentage of repairs by weakening that were started but not completed. In parentheses, the percentage of total failed runs, including those with timeout during generation of the inconsistent ontology. Note that repair using this method has only been attempted after the normal weakening based repair has been successful. This may skew the frequency of failures.}
 \end{table}
 
 \iffalse
