--- a/sections/b.main/2.background/3.bugs.tex
+++ b/sections/b.main/2.background/3.bugs.tex
@@ -13,7 +13,7 @@ Syntactic defects in an ontology can be caused by a statement that does not conf
   The axioms $C \sqsubseteq \sqsubseteq D$, $C(r(a, b))$, or $C \sqsubset D$ are all obviously not syntactically correct \SROIQ axioms. Similarly, the concepts $C \sqcup \sqcap D$, $\less 3 t.\self$, and $\self \sqcup D$ do all not match the grammar for concept expressions.
 \end{example}
 
-There may however be some additional restrictions on what constitutes a valid ontology that are not based solely on the grammatical rules. For ontologies, these might be for example the restrictions placed upon the form of the graph for a specific OWL profile. In the example of \SROIQ, these include the restricted use of non-simple roles and the regularity condition placed on the RBox. Restrictions of this kind can often be much easier to violate and harder to debug than the first kind of syntactic defects that is a violation of the grammar.
+There may however be some additional restrictions on what constitutes a valid ontology that are not based solely on the grammatical rules. For ontologies, these might be for example the restrictions placed upon the RDF graph for a specific OWL profile. In the example of \SROIQ, these include the restricted use of non-simple roles and the regularity condition placed on the RBox. Restrictions of this kind can often be much easier to violate and harder to debug than the first kind of syntactic defects that is a violation of the grammar.
 
 \begin{example}
   Given the vocabulary $N_C = \{ C \}$ and $N_R = \{ a, b, c \}$, the \SROIQ ontology $\Omc = \{ a \sqsubseteq b, b \circ c \sqsubseteq a \}$ is not valid. This is because it does not satisfy the regularity condition in \SROIQ. This can simply be verified by showing that no preorder $\preceq$ exists for which $a \preceq b$ and $a \not\preceq b$ hold.
@@ -23,7 +23,7 @@ There may however be some additional restrictions on what constitutes a valid on
 
 \subsubsection{Semantic Defects} \label{semantic-defects}
 
-For ontologies, semantic defects, as defined in \cite{kalyanpur2005debugging}  are those which can be discovered by a reasoner given an ontology free of syntactic defects. This includes for example the inconsistency of the ontology, or the unsatisfiability of a concept. The presence of such defects is generally not hard to identify, given the availability of a reasoner for the logic of the ontology. It is, however, often not trivial to understand the underlying source of the defect. In this thesis the focus will be mainly on these kinds of bugs, especially on the problem of inconsistent ontologies.
+For ontologies, semantic defects, as defined in \cite{kalyanpur2005debugging}  are those which can be discovered by a reasoner given an ontology free of syntactic defects. This includes for example the inconsistency of the ontology, or the unsatisfiability of a concept. The presence of such defects is generally not hard to identify, given the availability of a reasoner for the logic of the ontology. It is, however, often not trivial to understand the underlying source of the defect. In this thesis, the focus will be mainly on these kinds of bugs, especially on the problem of inconsistent ontologies.
 
 \begin{example}
   Given the vocabulary $N_C = \{ C, D \}$ and $N_I = \{ a \}$, the \SROIQ ontology $\Omc = \{ D \sqsubseteq \lnot C, D(a), C(a) \}$ is inconsistent. This can be seen clearly from the fact that for every interpretation $I$, $a^I$ must be in $D^I$, but this means that $a^I$ must not be in $C^I$ which contradicts with the last axiom.
@@ -37,9 +37,9 @@ These kinds of defects can in general not be detected automatically by tools. Th
 
 \subsection{Causes of Bugs} \label{causes-of-bugs}
 
-We will now briefly explore the possible causes of bugs in the context of ontology engineering. One major source of defects is of course human error on part of the ontology developer. These can range from trivial typos, that will most often simply result in syntactic errors, or from fundamental misunderstandings of the domain, which can lead to modelling mistakes. Especially syntactic errors concerning the additional constraints, like regularity and simplicity, can easily be violated as the result of an oversight by the modeller. One can for example define a role as transitive, and then afterwards use it in cardinality constraints. Unfortunately, however, this is not allowed in many ontology formalisms, such as in \SROIQ or OWL 2 DL. Similarly, mistakes during the modelling process can cause inconsistent ontologies or unsatisfiable concepts. The modeller might have defined two classes as disjoint, but later added an individual belonging to the intersection of the two concepts, yielding an inconsistent ontology.
+We will now briefly explore the possible causes of bugs in the context of ontology engineering. One major source of defects is of course human error by the ontology developer. These can range from trivial typos, that will most often simply result in syntactic errors, or from fundamental misunderstandings of the domain, which can lead to modelling mistakes. Especially syntactic errors concerning the additional constraints, like regularity and simplicity, can easily be violated as the result of an oversight by the modeller. One can for example define a role as transitive, and then afterwards use it in cardinality constraints. Unfortunately, however, this is not allowed in many ontology languages, such as in \SROIQ or OWL 2 DL. Similarly, mistakes during the modelling process can cause inconsistent ontologies or unsatisfiable concepts. The modeller might have defined two classes as disjoint, but later added an individual belonging to the intersection of the two concepts, yielding an inconsistent ontology.
 
-Another source for bugs in ontologies may arise while merging different ontologies. This may be done, especially in the context of OWL and the semantic web, to combine the knowledge obtained from different sources. This can again be a case where one ontology defines a certain role as transitive, while the other assumes that it is simple. Combining the two ontologies will then obviously lead to a violation of the global constraints. Also, different ontologies might make different but incompatible modelling choices when modelling the same domain. This can result is an ontology after merging that is inconsistent or has unsatisfiable concepts.
+Another common source for bugs in ontology engineering arises when merging different ontologies. This may be done, especially in the context of OWL and the semantic web, to combine the knowledge obtained from different sources. This can again be a case where one ontology defines a certain role as transitive, while the other assumes that it is simple. Combining the two ontologies will then obviously lead to a violation of the global constraints. Also, different ontologies might make different but incompatible modelling choices when modelling the same domain. This can result is an ontology after merging that is inconsistent or has unsatisfiable concepts.
 
 \begin{example}
   Given the vocabulary $N_C = \{ C, D \}$ and $N_I = \{ a, b \}$, the two \SROIQ ontology $\Omc_1 = \{ D \sqsubseteq C, D(a) \}$ and $\Omc_2 = \{ C \sqsubseteq \lnot D, C(b) \}$ are by themselves consistent. If we merge them, however, the resulting ontology $\Omc_1 \cup \Omc_2$ is no longer consistent.
