--- a/sections/b.main/2.background/4.repair.tex
+++ b/sections/b.main/2.background/4.repair.tex
@@ -3,7 +3,7 @@ As established in \cref{ontology-bugs}, maintaining the consistency and correctn
 
 \subsection{Basic Definitions} \label{basic-definitions}
 
-We define a repair as proposed in \cite{baader2018making}. It is assumed, as is the case for most DLs, that there exists a monotone consequence operator $\models$ such that for any two ontologies $\Omc_1 \subseteq \Omc_2$ and axiom $\alpha$, $\Omc_1 \models \alpha$ implies $\Omc_2 \models \alpha$. Additionally, $\op{Con}(\Omc)$ shall contain all consequences of $\Omc$, that is $\op{Con}(\Omc) = \{ \alpha \mid \Omc \models \alpha \}$. We split the ontology further into two disjoint sets $\Omc = \Omc_s \cup \Omc_r$ of \emph{static axioms} $\Omc_s$ and \emph{refutable axioms} $\Omc_r$. Static axioms are assumed to be correct and may not be touched by the repair procedure, while refutable axioms are possibly be erroneous. This separation is useful for example if the static part of the ontology is hand-crafted, while the refutable part is automatically generated. Similarly, it is applicable in case multiple ontologies are combined, and some sources are seen as less trustworthy than others.
+We define a repair as proposed in \cite{baader2018making}. It is assumed, as is the case for most DLs, that there exists a monotone consequence operator $\models$ such that for two ontologies $\Omc_1 \subseteq \Omc_2$ and axiom $\alpha$, $\Omc_1 \models \alpha$ implies $\Omc_2 \models \alpha$. Additionally, $\op{Con}(\Omc)$ shall contain all consequences of $\Omc$, that is $\op{Con}(\Omc) = \{ \alpha \mid \Omc \models \alpha \}$. We split the ontology further into two disjoint sets $\Omc = \Omc_s \cup \Omc_r$ of \emph{static axioms} $\Omc_s$ and \emph{refutable axioms} $\Omc_r$. Static axioms are assumed to be correct and may not be touched by the repair procedure, while refutable axioms are possibly erroneous. This separation is useful for example if the static part of the ontology is hand-crafted, while the refutable part has been automatically generated. Similarly, it is applicable in case multiple ontologies are combined, and some sources are seen as less trustworthy than others.
 
 \begin{definition}
   Given an ontology $\Omc = \Omc_s \cup \Omc_r$ and an unintended consequence $\Omc \models \alpha$, $\Omc_s \not\models \alpha$, the ontology $\Omc_s \subseteq \Omc'$ is a \emph{repair} of $\Omc$ with respect to $\alpha$ if $\op{Con}(\Omc') \subseteq \op{Con}(\Omc) \setminus \{\alpha\}.$ A repair $\Omc'$ is an \emph{optimal repair} of $\Omc$ with respect to $\alpha$ if there exists no other repair $\Omc_s \subseteq \Omc''$ such that $\op{Con}(\Omc') \subset \op{Con}(\Omc'') \subseteq \op{Con}(\Omc) \setminus \{\alpha\}$.
@@ -23,7 +23,7 @@ In contrast, the classical approach to repair consists of identifying and removi
   Given an ontology $\Omc = \Omc_s \cup \Omc_r$ and an unintended consequence $\Omc \models \alpha$, $\Omc_s \not\models \alpha$, the ontology $\Omc_s \subseteq \Omc' \subseteq \Omc$ is a \emph{classical repair} of $\Omc$ with respect to $\alpha$ if $\op{Con}(\Omc') \subseteq \op{Con}(\Omc) \setminus \{\alpha\}.$ A classical repair $\Omc'$ is an \emph{optimal classical repair} of $\Omc$ with respect to $\alpha$ if there exists no other classical repair $\Omc_s \subseteq \Omc'' \subseteq \Omc$ such that $\op{Con}(\Omc') \subset \op{Con}(\Omc'') \subseteq \op{Con}(\Omc) \setminus \{\alpha\}$.
 \end{definition}
 
-We can observe that every classical repair is in fact a valid repair. It follows that also a classical repair is guaranteed to exist. Unlike for the general case of optimal repairs, an optimal classical repair is always guaranteed to exist. This follows from the fact that the set of classical repairs is finite, and the $\subset$ relation is a strict partial order, so there can not be an infinite sequence of classical repairs $\Omc^{(1)}, \Omc^{(2)}, \dots$  such that $\op{Con}(\Omc^{(i)}) \subset \op{Con}(\Omc^{(i + 1)})$.
+We can observe that every classical repair is in fact a valid repair, and that also a classical repair is guaranteed to exist. Unlike for the general case of optimal repairs, an optimal classical repair is always guaranteed to exist. This follows from the fact that the set of classical repairs is finite, and the $\subset$ relation is a strict partial order, so there can not be an infinite sequence of classical repairs $\Omc^{(1)}, \Omc^{(2)}, \dots$  such that $\op{Con}(\Omc^{(i)}) \subset \op{Con}(\Omc^{(i + 1)})$.
 
 \subsection{Repair Approaches} \label{repair-approaches}
 
@@ -50,23 +50,23 @@ An alternative to computing all justification is to directly find a minimal corr
 While the classical approach is obviously sufficient to guarantee that a possible repair is found, it can lead to unnecessary information loss. That is, the repaired ontology might be missing some consequences of the original ontology that were actually desirable, and did not necessarily have to be removed in order to find a repair.
 
 \begin{example}
-  Given the inconsistent ontology $\Omc = \{ \top \sqsubseteq C \sqcap D, C \sqcap D \sqsubseteq \bot \}$, we want to repair it such that it becomes consistent. To repair this ontology using a classical repair, we have to remove one of the two axioms. However, to make the ontology consistent it would be sufficient to remove one of the disjuncts in first axiom.
+  Given the inconsistent ontology $\Omc = \{ \top \sqsubseteq C \sqcap D, C \sqcap D \sqsubseteq \bot \}$, we want to repair it such that it becomes consistent. To repair this ontology using a classical repair, we have to remove one of the two axioms. However, to make the ontology consistent, it would be sufficient to remove one of the disjuncts in the first axiom.
 \end{example}
 
-Since ideally, one wants to retain as much information as possible, alternative methods for repairing ontologies have been proposed that are able to preserve more information than the classical approach (e.g., \cite{du2014practical,AMAI-2018,baader2018making,troquard2018repairing,confalonieri2020towards,horridge2008laconic,lam2008fine}).
+Since, ideally, one wants to retain as much information as possible, alternative methods for repairing ontologies have been proposed that are able to preserve more information than the classical approach (e.g., \cite{du2014practical,AMAI-2018,baader2018making,troquard2018repairing,confalonieri2020towards,horridge2008laconic,lam2008fine}).
 
-One option is to first modify the original ontology and afterwards apply the classical repair approach. The intuition is that in the modified ontology the individual axioms should contain less information, and therefore, the removal of axioms leads to less information loos relative to the unmodified ontology. In \cite{horridge2008laconic} the authors propose a structural transformation, that replaces axioms with a set of weaker axioms that are semantically equivalent, but on their own contain less information.
+One option is to first modify the original ontology and afterwards apply the classical repair approach. The intuition is that in the modified ontology the individual axioms should contain less information, and therefore, the removal of axioms leads to less information loss relative to doing the same in the unmodified ontology. In \cite{horridge2008laconic} the authors propose a structural transformation, that replaces axioms with a set of weaker axioms that are semantically equivalent, but on their own contain less information.
 
 \begin{example}
   Given the inconsistent ontology $\Omc = \{ A \sqsubseteq B \sqcap \lnot C, B \sqsubseteq C, A(a) \}$, we want to repair it such that it becomes consistent. To repair this ontology using a classical repair, we have to remove one of the three axioms. However, we can transform it into the equivalent ontology $\Omc' = \{ A \sqsubseteq B, A \sqsubseteq \lnot C, B \sqsubseteq C, A(a) \}$. Now, we have some additional possibilities. We could for example remove only the axiom $A \sqsubseteq \lnot C$ and retain the consequence $C(a)$ which would otherwise have always been lost.
 \end{example}
 
-Another approach to repairing ontologies more gently that has been proposed in the literature is using \emph{axiom weakening} \cite{troquard2018repairing,confalonieri2020towards,baader2018making,lam2008fine}. Instead of removing axioms, they are replaced with weaker axioms. Replacing an axiom with a weaker axiom can not cause new consequences, but may diminish the set of consequences.
+Another approach to repairing ontologies more gently, that has been proposed in the literature, is using \emph{axiom weakening} \cite{troquard2018repairing,confalonieri2020towards,baader2018making,lam2008fine}. Instead of removing axioms, they are replaced with weaker axioms. Replacing an axiom with a weaker axiom can not cause new consequences, but may diminish the set of consequences.
 
 \begin{definition}
-  An axiom $\alpha$ is \emph{weaker} that another axioms $\alpha'$ with respect to some ontology $\Omc$ if and only if for every model $I \models \Omc$ of $\Omc$, $I \models \alpha$ implies $I \models \alpha'$. Equivalently we write $\alpha \models_\Omc \alpha'$.
+  An axiom $\alpha$ is \emph{weaker} that another axioms $\alpha'$ with respect to some ontology $\Omc$ if and only if for every model $I \models \Omc$ of $\Omc$, $I \models \alpha$ implies $I \models \alpha'$. Equivalently, we write $\alpha \models_\Omc \alpha'$.
 \end{definition}
 
-In \cite{lam2008fine} the authors show a method for pinpointing the causes for unsatisfiability within axioms, and propose a way of weakening axioms guided by this information. The authors of \cite{baader2018making} show general theoretical results for repair using axiom weakening, and propose a concrete weakening relation for the DL $\mathcal{EL}$. They further show that the repair algorithm using the proposed axiom weakening terminates in at most an exponential number of weakening steps. \cite{troquard2018repairing} presents the repair of inconsistent ontologies using axiom weakening with the help of refinement operators. It is further empirically shown in \cite{troquard2018repairing} that weakening axioms can retain significantly more information compared to removing them. This approach is later extended in \cite{confalonieri2020towards} to cover more expressive DLs, including most concepts of \SROIQ. Additionally, in \cite{confalonieri2020towards} it is shown that the proposed repair algorithm using axiom weakening will almost surely, i.e., with probability $1$, terminate.
+In \cite{lam2008fine} the authors show a method for pinpointing the causes for unsatisfiability within axioms, and propose a way of weakening axioms guided by this information. The authors of \cite{baader2018making} show general theoretical results for repair using axiom weakening, and propose a concrete weakening relation for the DL $\mathcal{EL}$. They further show that the repair algorithm using their proposed axiom weakening terminates in at most an exponential number of weakening steps. \cite{troquard2018repairing} presents the repair of inconsistent ontologies using axiom weakening with the help of refinement operators. It is further empirically shown in \cite{troquard2018repairing} that weakening axioms can retain significantly more information compared to removing them. This approach is later extended in \cite{confalonieri2020towards} to cover more expressive DLs, including most concepts of \SROIQ. Additionally, in \cite{confalonieri2020towards} it is shown that the proposed repair algorithm using axiom weakening will almost surely, i.e., with probability $1$, terminate.
 
-Whether optimal repairs exist for these axiom weakening based approaches depends largely on which method is used for selecting weaker axioms. Replacement of the axioms with tautologies is one trivial form of axiom weakening, and equivalent to generating classical repairs. On the other hand, the axiom weakening based repair approaches studied in \cite{troquard2018repairing,confalonieri2020towards} and the one used in this thesis do not necessarily guarantee the existence of an optimal repair. This can be seen from the fact that \cref{ex:no-optimal} is applicable also to those algorithms.
+Whether optimal repairs exist for these approaches based on axiom weakening depends largely on which method is used for selecting weaker axioms. Replacement of the axioms with only tautologies is one trivial form of axiom weakening, and equivalent to generating classical repairs. On the other hand, the axiom weakening based repair approaches studied in \cite{troquard2018repairing,confalonieri2020towards} and the one used in this thesis do not necessarily guarantee the existence of an optimal repair. This can be seen from the fact that \cref{ex:no-optimal} is applicable also to those algorithms.
